--- a/apps/base/_common/deploy/kustomization.yaml
+++ b/apps/base/_common/deploy/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 resources:
  - cluster-ca-secret.yaml
  - registry-secret.yaml
- - tls-secret.yaml
+ - ingress-tls.yaml
  - deny-all-ingress-networkPolicy.yaml
