Fix git-credentials.secret.env file name

--- a/apps/base/dev-argo-workflows-tasks/deploy/kustomization.yaml
+++ b/apps/base/dev-argo-workflows-tasks/deploy/kustomization.yaml
@@ -19,7 +19,7 @@ secretGenerator:
   - config/rsync/ssh_config
   - config/rsync/id_rsa
 - name: git-credentials
-  env: config/git-credentials.env
+  env: config/git-credentials.secret.env
 
 resources:
 - namespace.yaml
