--- a/apps/vagrant/dev-argo-workflows-tasks/deploy/kustomization.yaml
+++ b/apps/vagrant/dev-argo-workflows-tasks/deploy/kustomization.yaml
@@ -11,7 +11,7 @@ secretGenerator:
   - config/rsync/id_rsa
   behavior: replace
 - name: git-credentials
-  env: config/git-credentials.env
+  env: config/git-credentials.secret.env
   behavior: replace
 
 resources:
