--- a/apps/base/dev-argo-workflows-tasks/deploy/kustomization.yaml
+++ b/apps/base/dev-argo-workflows-tasks/deploy/kustomization.yaml
@@ -24,6 +24,8 @@ secretGenerator:
 resources:
 - namespace.yaml
 - ../../_common/deploy
+- argocd-server-tls-cert.yaml
+- argocd-ci-token.yaml
 - service-account.yaml
 - role.yaml
 - role-binding.yaml
