Migrate to the namespace-install for argo workflows

--- a/apps/base/dev-argo-workflows/deploy/kustomization.yaml
+++ b/apps/base/dev-argo-workflows/deploy/kustomization.yaml
@@ -15,5 +15,4 @@ namespace: dev-argo-workflows
 resources:
 - namespace.yaml
 - ../../_common/deploy
-- base
-- cluster-install
+- namespace-install
