--- a/apps/base/dev-argo-workflows/deploy/namespace-install/argo-server-rbac/kustomization.yaml
+++ b/apps/base/dev-argo-workflows/deploy/namespace-install/argo-server-rbac/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- argo-server-clusterole.yaml
-- argo-server-clusterolebinding.yaml
+- argo-server-role.yaml
+- argo-server-rolebinding.yaml
