Add missing argo workflows rbac for namespace deployment

--- a/apps/base/dev-argo-workflows-tasks/deploy/kustomization.yaml
+++ b/apps/base/dev-argo-workflows-tasks/deploy/kustomization.yaml
@@ -24,6 +24,8 @@ secretGenerator:
 resources:
 - namespace.yaml
 - ../../_common/deploy
+- argo-server-rbac
+- workflow-controller-rbac
 - executor-rbac
 - templates
 - argocd
