Add argo-events rbac and event configuration

--- a/apps/base/dev-argo-workflows-tasks/deploy/kustomization.yaml
+++ b/apps/base/dev-argo-workflows-tasks/deploy/kustomization.yaml
@@ -27,5 +27,8 @@ resources:
 - argo-server-rbac
 - workflow-controller-rbac
 - executor-rbac
+- argo-events-rbac
+- argo-events-sensor-rbac
+- events
 - templates
 - argocd
