Implement build & deploy using argo

--- a/ansible/install_applications_new/roles/app_base/defaults/main.yml
+++ b/ansible/install_applications_new/roles/app_base/defaults/main.yml
@@ -16,4 +16,5 @@ docker_private_registry:
 
 app_gitops_path: "{{ role_path }}/../../../../apps/base/{{ app_name }}"
 app_build_path: "{{ app_gitops_path }}/build"
-app_deploy_path: "{{ role_path }}/../../../../apps/vagrant/{{ app_name }}/deploy"
+app_overlay_path: "{{ role_path }}/../../../../apps/vagrant/{{ app_name }}"
+app_deploy_path: "{{ app_overlay_path }}/deploy"
