Implement argo configs for apps

--- a/apps/base/cluster-reflector/deploy/kustomization.yaml
+++ b/apps/base/cluster-reflector/deploy/kustomization.yaml
@@ -13,6 +13,7 @@ namespace: cluster-reflector
 
 resources:
 - namespace.yaml
+- ../../_common/deploy
 - serviceaccount.yaml
 - clusterRole.yaml
 - clusterRoleBinding.yaml
