--- a/apps/base/dev-argo-events/deploy/namespace-install/kustomization.yaml
+++ b/apps/base/dev-argo-events/deploy/namespace-install/kustomization.yaml
@@ -23,6 +23,6 @@ patches:
   - patch: |-
       - op: add
         path: /spec/template/spec/containers/0/args/-
-        value: dev-argo-workflows-tasks
+        value: dev-argo-tasks
     target:
       kind: Deployment
