--- a/apps/vagrant/dev-argo-tasks/application.yaml
+++ b/apps/vagrant/dev-argo-tasks/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: dev-argo-workflows-tasks
+  name: dev-argo-tasks
   namespace: dev-argo-cd
   # Add this finalizer ONLY if you want these to cascade delete.
   finalizers:
@@ -14,11 +14,11 @@ spec:
   source:
     repoURL: http://gitea.dev-gitea.svc.cluster.local:3000/MyOrg/home-server.git
     targetRevision: dev/gitops
-    path: apps/vagrant/dev-argo-workflows-tasks/deploy
+    path: apps/vagrant/dev-argo-tasks/deploy
   
   destination:
     server: https://kubernetes.default.svc
-    namespace: dev-argo-workflows-tasks
+    namespace: dev-argo-tasks
 
   syncPolicy:
     syncOptions:
