--- a/ansible/install_applications_new/roles/dev-argo-tasks/meta/main.yml
+++ b/ansible/install_applications_new/roles/dev-argo-tasks/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Deploy application dev-argo-workflows-tasks"
+  description: "Deploy application dev-argo-tasks"
   min_ansible_version: 2.7
   platforms:
     - name: Debian
