--- a/ansible/install_applications_new/roles/dev-argo-tasks/tasks/main.yml
+++ b/ansible/install_applications_new/roles/dev-argo-tasks/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Build and deploy Argo Workflows tasks
+- name: Build and deploy Argo tasks
   ansible.builtin.import_tasks: ../../app_base/tasks/build-and-deploy.yml
   vars:
-    app_name: dev-argo-workflows-tasks
+    app_name: dev-argo-tasks
