--- a/apps/vagrant/dev-argo-tasks/sensor.yaml
+++ b/apps/vagrant/dev-argo-tasks/sensor.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Sensor
 metadata:
-  name: dev-argo-workflows-tasks
-  namespace: dev-argo-workflows-tasks
+  name: dev-argo-tasks
+  namespace: dev-argo-tasks
 spec:
   template:
     serviceAccountName: operate-workflow-sa
@@ -23,7 +23,7 @@ spec:
           - path: "[body.commits.#.modified.#()#,body.commits.#.added.#()#,body.commits.#.removed.#()#]"
             type: string
             value:
-              - "apps/dev-argo-workflows-tasks/.*"
+              - "apps/dev-argo-tasks/.*"
   triggers:
     - template:
         name: argo-workflow-trigger
@@ -34,14 +34,14 @@ spec:
               apiVersion: argoproj.io/v1alpha1
               kind: Workflow
               metadata:
-                namespace: dev-argo-workflows-tasks
-                generateName: dev-argo-workflows-tasks-build-and-deploy-
+                namespace: dev-argo-tasks
+                generateName: dev-argo-tasks-build-and-deploy-
               spec:
                 entrypoint: build-and-deploy-from-rsync
                 arguments:
                   parameters:
                     - name: app_name
-                      value: dev-argo-workflows-tasks
+                      value: dev-argo-tasks
                     - name: git_repo
                       value: http://gitea.dev-gitea.svc.cluster.local:3000/MyOrg/home-server.git
                     - name: git_branch
