--- a/apps/vagrant/dev-minio/workflow.yaml
+++ b/apps/vagrant/dev-minio/workflow.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
-  namespace: dev-argo-workflows-tasks
-  generateName: dev-argo-workflows-build-and-deploy-
+  namespace: dev-argo-tasks
+  generateName: dev-minio-build-and-deploy-
 spec:
   entrypoint: build-and-deploy-from-rsync
   arguments:
     parameters:
       - name: app_name
-        value: dev-argo-workflows
+        value: dev-minio
       - name: base_git_repo
         value: http://gitea.dev-gitea.svc.cluster.local:3000/MyOrg/home-server.git
       - name: base_git_branch
