--- a/ansible/install_applications_new/roles/cluster-kubernetes-replicator/meta/main.yml
+++ b/ansible/install_applications_new/roles/cluster-kubernetes-replicator/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Deploy application cluster-reflector"
+  description: "Deploy application cluster-kubernetes-replicator"
   min_ansible_version: 2.7
   platforms:
     - name: Debian
