--- a/apps/base/cluster-kubernetes-replicator/deploy/cluster-role-binding.yaml
+++ b/apps/base/cluster-kubernetes-replicator/deploy/cluster-role-binding.yaml
@@ -1,12 +1,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: reflector
+  name: kubernetes-replicator
 roleRef:
   kind: ClusterRole
-  name: reflector
+  name: kubernetes-replicator
   apiGroup: rbac.authorization.k8s.io
 subjects:
-  - kind: ServiceAccount
-    name: reflector
-    namespace: default
+- kind: ServiceAccount
+  name: kubernetes-replicator
