--- a/apps/base/dev-argo-cd/deploy/base/server/argocd-server-tls-secret.yaml
+++ b/apps/base/dev-argo-cd/deploy/base/server/argocd-server-tls-secret.yaml
@@ -3,4 +3,4 @@ kind: Secret
 metadata:
   name: argocd-server-tls
   annotations:
-    reflector.v1.k8s.emberstack.com/reflects: "cluster-secrets/opensslpki-argocd-tls"
+    replicator.v1.mittwald.de/replicate-from: "cluster-secrets/opensslpki-argocd-tls"
